ags (4.3.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* refactored ags_functional_notation_editor_workflow_test.c
	* refactored ags_functional_automation_editor_workflow_test.c
	* refactored ags_functional_panel_test.c

ags (4.2.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_effect_line_remove_plugin()
	* improved functional-system-tests.mk.am
	* refactored ags_functional_line_member_add_and_destroy_test.c

ags (4.2.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_audio_start() don't initialize recall twice
	* improved ags_channel_start() don't initialize recall twice

ags (4.2.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed hide machine
	* fixed machine selector restore from XML
	* functional UI tests work again!
	* refactored ags_functional_machine_add_and_destroy_test.c
	* refactored ags_functional_machine_link_test.c

ags (4.2.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential SIGSEGV with AgsEffectPad
	* fixed missing pitch selection of AgsFFPlayer
	* started to refactor functional tests

ags (4.2.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor improvements

ags (4.2.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsNotationEdit resize and reset scrollars
	* improved AgsLv2Bridge and AgsLiveLv2Bridge hide/show preset and program

ags (4.2.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed XML restore machine selector unitialized value

ags (4.2.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsSyncsynth and AgsFMSyncsynth check button type of auto-update
	* fixed AgsSynth and AgsFMSynth control changed callback correct parent accessor

ags (4.2.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsFMSyncsynth missing synth generator

ags (4.2.5)
