@@ -44,7 +44,8 @@ installcheck_programs = \
 	ags_check_system_functional_machine_link_test \
 	ags_check_system_functional_line_member_add_and_destroy_test \
 	ags_check_system_functional_notation_editor_workflow_test \
-	ags_check_system_functional_panel_test
+	ags_check_system_functional_panel_test \
+	ags_check_system_functional_mixer_test
 
 noinst_PROGRAMS += $(installcheck_programs)
 
@@ -145,6 +146,13 @@ ags_check_system_functional_panel_test_CPPFLAGS = -DAGS_SRC_DIR=\"$(srcdir)\" $(
 ags_check_system_functional_panel_test_LDFLAGS = -pthread $(LDFLAGS)
 ags_check_system_functional_panel_test_LDADD = $(gsequencer_check_system_functional_test_LDADD)
 
+# functional mixer test
+ags_check_system_functional_mixer_test_SOURCES = ags/test/app/machine/ags_functional_mixer_test.c
+ags_check_system_functional_mixer_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS) $(JACK_CFLAGS) $(GSTREAMER_CFLAGS) $(FONTCONFIG_CFLAGS) $(GDKPIXBUF_CFLAGS) $(CAIRO_CFLAGS) $(GTK_CFLAGS) $(WEBKITGTK_CFLAGS) $(POPPLER_CFLAGS) $(GTK_MAC_INTEGRATION_CFLAGS) $(W32API_CFLAGS)
+ags_check_system_functional_mixer_test_CPPFLAGS = -DAGS_SRC_DIR=\"$(srcdir)\" $(AGS_RESOURCES) $(AGS_FEATURES)
+ags_check_system_functional_mixer_test_LDFLAGS = -pthread $(LDFLAGS)
+ags_check_system_functional_mixer_test_LDADD = $(gsequencer_check_system_functional_test_LDADD)
+
 ags-parallel-check-system-valgrind-functional-test: $(installcheck_programs)
 	xvfb-run --server-args="-screen 0 1920x1080x24" -a libtool --mode=execute valgrind -v ./ags_check_system_functional_server_test
 	xvfb-run --server-args="-screen 0 1920x1080x24" -a libtool --mode=execute valgrind -v ./ags_check_system_functional_osc_server_test
@@ -172,8 +180,8 @@ ags-check-system-functional-test: $(installcheck_programs)
 	./ags_check_system_functional_notation_editor_workflow_test
 	./ags_check_system_functional_automation_editor_workflow_test
 	./ags_check_system_functional_panel_test
+	./ags_check_system_functional_mixer_test
 
-#./ags_check_system_functional_mixer_test
 #./ags_check_system_functional_drum_test
 #./ags_check_system_functional_matrix_test
 #./ags_check_system_functional_synth_test
