@@ -4,6 +4,7 @@ ags (4.3.0)
 	* refactored ags_functional_notation_editor_workflow_test.c
 	* refactored ags_functional_automation_editor_workflow_test.c
 	* refactored ags_functional_panel_test.c
+	* refactored ags_functional_mixer_test.c
 
 ags (4.2.14)
 
